Fix multiple minor CSS misalignments (#2651)

--- a/app/style/SendPage.less
+++ b/app/style/SendPage.less
@@ -196,11 +196,11 @@
   }
 
   .output-row {
-    width: 355px;
+    width: 367px;
   }
 
   .send-button-area {
-    width: 355px;
+    width: 367px;
   }
 
   .send-label {
@@ -221,7 +221,7 @@
   .details-area {
     padding: 0;
     display: flex;
-    width: 355px;
+    width: 367px;
     height: 85px;
   }
 
